--- a/GlucoMan.Maui/AboutPage.xaml
+++ b/GlucoMan.Maui/AboutPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.AboutPage"
              Title="About">
-    <Grid RowDefinitions="Auto,*">
+    <Grid RowDefinitions="25,*">
       <VerticalStackLayout VerticalOptions="Fill" HorizontalOptions="Fill">
         <HorizontalStackLayout HorizontalOptions="Center" VerticalOptions="Center">
           <ContentView Padding="0,20,0,20" VerticalOptions="Fill">
@@ -12,12 +12,14 @@
         </HorizontalStackLayout>
       </VerticalStackLayout>
       <ScrollView Grid.Row="1">
-        <VerticalStackLayout Padding="20,24,20,24" Spacing="10">
+        <VerticalStackLayout Padding="20,24,20,24" Spacing="8">
           <Border BackgroundColor="#2196F3" Padding="0">
             <Label x:Name="lblAppName" Text="GlucoMan" HorizontalTextAlignment="Center" TextColor="White" FontSize="32"/>
           </Border>
-          <Label Text="GlucoMan will be a Glucose Manager program for the diabetic person. " FontSize="20" Padding="0,0,0,0"/>
-          <Label Text="Currently it makes just a few calculations, but very useful to the diabetic person that has to make carbohydrate count. I will expand the program in the future, including full management of insulin and carbohydrates."
+          <Label Text="GlucoMan is a Glucose Manager program for the diabetic person" FontSize="20" Padding="0,0,0,0"/>
+                <Label Text="Helps with the operations needed to manage carb counting. Currently manages data related to measured glucose, carbohydrates consumed during meals, foods, insulin injections.
+Calculates: the insulin bolus based on carbohydrates to be consumed during meals, the foods to eat to reach the desired carbohydrates and also a rough prediction of when blood sugar will reach a hypo value.
+Prototype functions for weighing foods and managing recipes are also included, still in preliminary development."
                  FontSize="15" Padding="0,0,0,0"/>
           <Label Text="GlucoMan is Free Software (licence: GPL v.2) initiated by:" FontSize="15"
                  HorizontalTextAlignment="Center" Padding="0,0,0,0"/>
